--- a/main/assets/scss/itesoft.scss
+++ b/main/assets/scss/itesoft.scss
@@ -5,4 +5,7 @@
   //Side menu
 "side-menu";
 
-
+html {
+	padding-top : 70px;
+	overflow : hidden;
+}
